<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rudism.fastmail.fm.contacts.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textStep1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textIconAttribution"
        android:layout_alignParentTop="true"
        android:text="@string/instructions_step1" />

    <Button
        android:id="@+id/accountsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textStep1"
        android:layout_alignRight="@+id/textStep1"
        android:layout_below="@+id/textStep1"
        android:layout_marginTop="15dp"
        android:text="@string/account_btn_text" />

    <TextView
        android:id="@+id/textStep2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/accountsButton"
        android:layout_below="@+id/accountsButton"
        android:layout_marginTop="15dp"
        android:text="@string/instructions_step2" />
    
    <TextView
        android:id="@+id/textStep3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textStep2"
        android:layout_below="@+id/textStep2"
        android:layout_marginTop="15dp"
        android:text="@string/instructions_step3" />
    
    <TextView
        android:id="@+id/textNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textStep3"
        android:layout_below="@+id/textStep3"
        android:layout_marginTop="15dp"
        android:text="@string/instructions_note" />
    
    <TextView
        android:id="@+id/textIconAttribution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/icon_attribution" />

</RelativeLayout>